Assignment form created on Jupyter Notebook day2

--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -11,9 +11,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    This exercise will not go through all the ways these data could be analysed. We’ll return to this dataset in later exercises.Please answer the following questions. You don’t need to provide code used to get the results, but please answer using whole sentences.\n",
+    "    This exercise will not go through all the ways these data could be analysed. We’ll return to this dataset in later exercises.Please answer the following questions. You don’t need to provide code used to get the results, but please answer using whole sentences."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1. Get to know the data.(1p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "a) Identify the between and within subjects variables(or factors,if a factor is spread among multiple variables).\n",
     "\n",
-    "1. Gettoknowthedata.(1p)"
+    "    The between is age.group; Young or Old adults\n",
+    "    \n",
+    "    The within subjects variables are; Sentence, N.Letters, Trialtime, Error.percentage, Backapace.\n",
+    "    \n",
+    "    Make comparison with the between and within subjects variables..."
    ]
   },
   {
@@ -56,19 +81,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "a) Identify the between and within subjects variables(or factors,if a factor is spread among multiple variables).\n",
-    "\n",
-    "    The between is age.group; Young or Old adults\n",
-    "    \n",
-    "    The within subjects variables are; Sentence, N.Letters, Trialtime, Error.percentage, Backapace.\n",
-    "    \n",
-    "    Make comparison with the between and within subjects variables..."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -84,27 +96,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "       id age.group  sentence  n.letters  trialtime  error.percent  backspaces\n",
-      "0     101     young         1         19      13696       0.052632           9\n",
-      "1     101     young         2         18      11080       0.000000           4\n",
-      "2     101     young         3         15       7774       0.000000           1\n",
-      "3     101     young         4         19      11943       0.000000           5\n",
-      "4     101     young         5         13       5169       0.000000           0\n",
-      "...   ...       ...       ...        ...        ...            ...         ...\n",
-      "1003  211       old        45         20      25260       0.150000           4\n",
-      "1004  211       old        46         21      55469       0.000000          17\n",
-      "1005  211       old        48         21      30216       0.000000           4\n",
-      "1006  211       old        49         18      32680       0.000000           7\n",
-      "1007  211       old        50         18      24873       0.000000           0\n",
-      "\n",
-      "[1008 rows x 7 columns]\n"
+     "data": {
+      "text/plain": [
+       "0       101\n",
+       "1       101\n",
+       "2       101\n",
+       "3       101\n",
+       "4       101\n",
+       "       ... \n",
+       "1003    211\n",
+       "1004    211\n",
+       "1005    211\n",
+       "1006    211\n",
+       "1007    211\n",
+       "Name: id, Length: 1008, dtype: int64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import os\n",
+    "\n",
+    "DATA_FOLDER = 'data'\n",
+    "data_file = os.path.join(DATA_FOLDER, 'smartphone-typing.csv')\n",
+    "df = pd.read_csv(data_file)\n",
+    "\n",
+    "df['id']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are 1008 participents."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'is_yong' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-24-013a0aa859b1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0mis_old\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'age.group'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'old'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m \u001b[0mis_n_of_pacient\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mis_yong\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mis_n_of_pacient\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'is_yong' is not defined"
      ]
     }
    ],
@@ -118,53 +175,14 @@
     "data_file = os.path.join(DATA_FOLDER, 'smartphone-typing.csv')\n",
     "df = pd.read_csv(data_file)\n",
     "\n",
-    "print(df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import os\n",
-    "\n",
-    "DATA_FOLDER = 'data'\n",
-    "data_file = os.path.join(DATA_FOLDER, 'smartphone-typing.csv')\n",
-    "df = pd.read_csv(data_file)\n",
-    "\n",
-    "#print(df)\n",
-    "\n",
-    "age_group = ['young', 'old']\n",
-    "\n",
-    "n_age_group = len(age_group)\n",
-    "\n",
-    "\n",
     "is_young = df['age.group'] == 'young'\n",
     "is_old = df['age.group'] == 'old'\n",
     "\n",
-    "sentence_young = df[is_young]['sentence']\n",
-    "\n",
-    "#sentence_old = df[is_old]['sentence']\n",
-    "print('max value', max(sentence_young))\n",
-    "\n",
-    "fig, ax = plt.subplots()\n",
-    "ax.hist(sentence_young, bins=np.arange(0, 51,10))\n",
-    "ax.set_xlabel('sentence')\n",
-    "ax.set_ylabel('# observations')\n",
-    "plt.show()\n",
-    "\n"
+    "is_n_of_pacient = len(df[is_yong])\n",
+    "                      \n",
+    "print(is_n_of_pacient)\n",
+    "                      \n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
